--- a/renovate.json
+++ b/renovate.json
@@ -100,7 +100,7 @@
       "enabled": true
     },
     {
-      "groupName": "@elastic/appex-ai-infra",
+      "groupName": "@elastic/appex-ai-infra dependencies",
       "matchDepNames": [
         "@aws-crypto/sha256-js",
         "@aws-crypto/util",
@@ -128,6 +128,45 @@
       ],
       "labels": [
         "Team:AI Infra",
+        "release_note:skip",
+        "backport:all-open"
+      ],
+      "enabled": true
+    },
+    {
+      "groupName": "@elastic/appex-qa dependencies",
+      "matchDepNames": [
+        "cheerio",
+        "@istanbuljs/nyc-config-typescript",
+        "@istanbuljs/schema",
+        "@types/enzyme",
+        "@types/faker",
+        "@types/pixelmatch",
+        "@types/pngjs",
+        "@types/supertest",
+        "@wojtekmaj/enzyme-adapter-react-17",
+        "babel-plugin-istanbul",
+        "enzyme",
+        "enzyme-to-json",
+        "faker",
+        "nyc",
+        "oboe",
+        "pixelmatch",
+        "playwright",
+        "pngjs",
+        "sharp",
+        "superagent",
+        "supertest",
+        "xmlbuilder"
+      ],
+      "reviewers": [
+        "team:appex-qa"
+      ],
+      "matchBaseBranches": [
+        "main"
+      ],
+      "labels": [
+        "Team:QA",
         "release_note:skip",
         "backport:all-open"
       ],
