[Security solution] `ChatBedrockConverse` (#200042)

--- a/package.json
+++ b/package.json
@@ -104,6 +104,7 @@
     "@appland/sql-parser": "^1.5.1",
     "@aws-crypto/sha256-js": "^5.2.0",
     "@aws-crypto/util": "^5.2.0",
+    "@aws-sdk/client-bedrock-runtime": "^3.687.0",
     "@babel/runtime": "^7.24.7",
     "@dagrejs/dagre": "^1.1.4",
     "@dnd-kit/core": "^6.1.0",
@@ -1019,7 +1020,8 @@
     "@kbn/xstate-utils": "link:packages/kbn-xstate-utils",
     "@kbn/zod": "link:packages/kbn-zod",
     "@kbn/zod-helpers": "link:packages/kbn-zod-helpers",
-    "@langchain/community": "0.3.11",
+    "@langchain/aws": "^0.1.2",
+    "@langchain/community": "0.3.14",
     "@langchain/core": "^0.3.16",
     "@langchain/google-common": "^0.1.1",
     "@langchain/google-genai": "^0.1.2",
@@ -1054,7 +1056,9 @@
     "@slack/webhook": "^7.0.1",
     "@smithy/eventstream-codec": "^3.1.1",
     "@smithy/eventstream-serde-node": "^3.0.3",
-    "@smithy/protocol-http": "^4.0.2",
+    "@smithy/middleware-stack": "^3.0.10",
+    "@smithy/node-http-handler": "^3.3.1",
+    "@smithy/protocol-http": "^4.1.7",
     "@smithy/signature-v4": "^3.1.1",
     "@smithy/types": "^3.2.0",
     "@smithy/util-utf8": "^3.0.0",
