--- a/renovate.json
+++ b/renovate.json
@@ -1212,6 +1212,14 @@
       ],
       "minimumReleaseAge": "7 days",
       "enabled": true
+    },
+    {
+      "groupName": "@elastic/request-converter",
+      "matchDepNames": ["@elastic/request-converter"],
+      "reviewers": ["team:kibana-management"],
+      "matchBaseBranches": ["main"],
+      "labels": ["release_note:skip", "backport:skip", "Team:Kibana Management", "Feature:Console"],
+      "enabled": true
     }
   ],
   "customManagers": [
