--- a/x-pack/plugins/observability_solution/slo/tsconfig.json
+++ b/x-pack/plugins/observability_solution/slo/tsconfig.json
@@ -7,7 +7,9 @@
     "common/**/*",
     "public/**/*",
     "server/**/*",
-    "../../../typings/**/*"
+    "../../../typings/**/*",
+    // Emotion theme typing
+    "./emotion.d.ts"
   ],
   "exclude": [
     "target/**/*"
