--- a/renovate.json
+++ b/renovate.json
@@ -285,6 +285,29 @@
       "enabled": true
     },
     {
+      "groupName": "@elastic/kibana-cloud-security-posture dependencies",
+      "matchDepNames": [
+        "@mswjs/http-middleware",
+        "@types/byte-size",
+        "byte-size",
+        "msw",
+        "xterm"
+      ],
+      "reviewers": [
+        "team:kibana-cloud-security-posture"
+      ],
+      "matchBaseBranches": [
+        "main"
+      ],
+      "labels": [
+        "Team:Cloud Security",
+        "release_note:skip",
+        "backport:all-open"
+      ],
+      "enabled": true,
+      "minimumReleaseAge": "7 days"
+    },
+    {
       "groupName": "@elastic/charts",
       "matchDepNames": [
         "@elastic/charts"
@@ -1038,27 +1061,6 @@
       "enabled": true
     },
     {
-      "groupName": "TTY Output",
-      "matchDepNames": [
-        "xterm",
-        "byte-size",
-        "@types/byte-size"
-      ],
-      "reviewers": [
-        "team:sec-cloudnative-integrations"
-      ],
-      "matchBaseBranches": [
-        "main"
-      ],
-      "labels": [
-        "Team: AWP: Visualization",
-        "release_note:skip",
-        "backport:skip"
-      ],
-      "minimumReleaseAge": "7 days",
-      "enabled": true
-    },
-    {
       "groupName": "Cloud Defend",
       "matchDepNames": [
         "monaco-yaml"
@@ -1191,25 +1193,6 @@
       "enabled": true
     },
     {
-      "groupName": "MSW",
-      "matchPackageNames": [
-        "msw"
-      ],
-      "reviewers": [
-        "team:kibana-cloud-security-posture"
-      ],
-      "matchBaseBranches": [
-        "main"
-      ],
-      "labels": [
-        "Team:Cloud Security",
-        "release_note:skip",
-        "backport:skip"
-      ],
-      "minimumReleaseAge": "7 days",
-      "enabled": true
-    },
-    {
       "groupName": "re2js",
       "matchDepNames": [
         "re2js"
@@ -1269,25 +1252,6 @@
       "enabled": true
     },
     {
-      "groupName": "@mswjs/http-middleware",
-      "matchPackageNames": [
-        "@mswjs/http-middleware"
-      ],
-      "reviewers": [
-        "team:kibana-cloud-security-posture"
-      ],
-      "matchBaseBranches": [
-        "main"
-      ],
-      "labels": [
-        "Team:Cloud Security",
-        "release_note:skip",
-        "backport:skip"
-      ],
-      "minimumReleaseAge": "7 days",
-      "enabled": true
-    },
-    {
       "groupName": "@xyflow/react",
       "matchPackageNames": [
         "@xyflow/react"
@@ -1301,7 +1265,7 @@
       "labels": [
         "Team:Cloud Security",
         "release_note:skip",
-        "backport:skip"
+        "backport:all-open"
       ],
       "minimumReleaseAge": "7 days",
       "enabled": true
@@ -1320,7 +1284,7 @@
       "labels": [
         "Team:Cloud Security",
         "release_note:skip",
-        "backport:skip"
+        "backport:all-open"
       ],
       "minimumReleaseAge": "7 days",
       "enabled": true
