--- a/package.json
+++ b/package.json
@@ -802,6 +802,7 @@
     "@kbn/search-index-documents": "link:packages/kbn-search-index-documents",
     "@kbn/search-indices": "link:x-pack/plugins/search_indices",
     "@kbn/search-inference-endpoints": "link:x-pack/plugins/search_inference_endpoints",
+    "@kbn/search-navigation": "link:x-pack/plugins/search_solution/search_navigation",
     "@kbn/search-notebooks": "link:x-pack/plugins/search_notebooks",
     "@kbn/search-playground": "link:x-pack/plugins/search_playground",
     "@kbn/search-response-warnings": "link:packages/kbn-search-response-warnings",
